--- a/helix/.config/helix/languages.toml
+++ b/helix/.config/helix/languages.toml
@@ -1,3 +1,18 @@
+[language-server.ruff]
+command = "ruff"
+args = ["server"]
+
+[language-server.basedpyright]
+command = "basedpyright-langserver"
+args = ["--stdio"]
+
+[language-server.ty]
+command = "ty"
+args = ["server"]
+
+[language-server.basedpyright.config]
+basedpyright.analysis.diagnosticMode = "openFilesOnly"
+
 [[language]]
 name = "javascript"
 formatter = { command = 'biome', args = ["format", "--stdin-file-path", "buffer.js"] }
@@ -17,3 +32,9 @@ auto-format = true
 name = "tsx"
 formatter = { command = 'biome', args = ["format", "--stdin-file-path", "buffer.tsx"] }
 auto-format = true
+
+[[language]]
+name = "python"
+language-servers = ["basedpyright", "ruff", "ty"]
+auto-format = true
+
