feat: ajusta a config do helix e adiciona a config do niri

--- a/helix/.config/helix/languages.toml
+++ b/helix/.config/helix/languages.toml
@@ -12,6 +12,8 @@ args = ["server"]
 
 [language-server.basedpyright.config]
 basedpyright.analysis.diagnosticMode = "openFilesOnly"
+basedpyright.analysis.typeCheckingMode = "strict"
+
 
 [[language]]
 name = "javascript"
