--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -21,7 +21,7 @@ format = "[$branch]($style)"
 style = "bright-black"
 
 [git_status]
-format = "[[(*$conflicted$untracked$modified$staged$renamed$deleted)](218) ($ahead_behind$stashed)]($style)"
+format = "[[(*$conflicted$untracked$modified$staged$renamed$deleted)](bright-black) ($ahead_behind$stashed)]($style)"
 style = "bright-black"
 conflicted = "​"
 untracked = "​"
@@ -40,7 +40,7 @@ format = "[$duration]($style) "
 style = "yellow"
 
 [[battery.display]]
-threshold = 100
+threshold = 80
 style = "bold green"
 
 [[battery.display]]
