--- a/noctalia/.config/noctalia/settings.json
+++ b/noctalia/.config/noctalia/settings.json
@@ -2,20 +2,22 @@
     "appLauncher": {
         "customLaunchPrefix": "",
         "customLaunchPrefixEnabled": false,
+        "enableClipPreview": true,
         "enableClipboardHistory": true,
         "pinnedExecs": [
         ],
         "position": "center",
         "sortByMostUsed": true,
         "terminalCommand": "ghostty -e",
-        "useApp2Unit": false
+        "useApp2Unit": false,
+        "viewMode": "list"
     },
     "audio": {
         "cavaFrameRate": 30,
         "externalMixer": "pwvucontrol || pavucontrol",
         "mprisBlacklist": [
         ],
-        "preferredPlayer": "mpv",
+        "preferredPlayer": "celluloid",
         "visualizerQuality": "high",
         "visualizerType": "linear",
         "volumeOverdrive": false,
@@ -38,29 +40,19 @@
             "center": [
                 {
                     "characterCount": 2,
+                    "followFocusedScreen": false,
                     "hideUnoccupied": false,
                     "id": "Workspace",
-                    "labelMode": "index"
+                    "labelMode": "none"
                 }
             ],
             "left": [
                 {
-                    "colorizeDistroLogo": false,
+                    "colorizeDistroLogo": true,
                     "customIconPath": "",
-                    "icon": "",
+                    "icon": "menu",
                     "id": "ControlCenter",
                     "useDistroLogo": false
-                },
-                {
-                    "diskPath": "/",
-                    "id": "SystemMonitor",
-                    "showCpuTemp": true,
-                    "showCpuUsage": true,
-                    "showDiskUsage": false,
-                    "showMemoryAsPercent": true,
-                    "showMemoryUsage": true,
-                    "showNetworkStats": false,
-                    "usePrimaryColor": false
                 },
                 {
                     "colorizeIcons": false,
@@ -70,18 +62,6 @@
                     "scrollingMode": "hover",
                     "showIcon": false,
                     "useFixedWidth": false
-                },
-                {
-                    "hideMode": "hidden",
-                    "hideWhenIdle": false,
-                    "id": "MediaMini",
-                    "maxWidth": 145,
-                    "scrollingMode": "hover",
-                    "showAlbumArt": false,
-                    "showArtistFirst": true,
-                    "showVisualizer": false,
-                    "useFixedWidth": false,
-                    "visualizerType": "linear"
                 }
             ],
             "right": [
@@ -95,14 +75,14 @@
                     ]
                 },
                 {
+                    "displayMode": "onhover",
+                    "id": "Battery",
+                    "warningThreshold": 30
+                },
+                {
                     "hideWhenZero": true,
                     "id": "NotificationHistory",
                     "showUnreadBadge": true
-                },
-                {
-                    "displayMode": "alwaysShow",
-                    "id": "Battery",
-                    "warningThreshold": 30
                 },
                 {
                     "displayMode": "onhover",
@@ -115,6 +95,10 @@
                     "id": "Clock",
                     "useCustomFont": false,
                     "usePrimaryColor": true
+                },
+                {
+                    "displayMode": "onhover",
+                    "id": "WiFi"
                 }
             ]
         }
@@ -144,11 +128,11 @@
                 "id": "profile-card"
             },
             {
-                "enabled": false,
+                "enabled": true,
                 "id": "shortcuts-card"
             },
             {
-                "enabled": true,
+                "enabled": false,
                 "id": "audio-card"
             },
             {
@@ -168,9 +152,6 @@
                 },
                 {
                     "id": "Bluetooth"
-                },
-                {
-                    "id": "WallpaperSelector"
                 }
             ],
             "right": [
@@ -178,17 +159,14 @@
                     "id": "Notifications"
                 },
                 {
-                    "id": "KeepAwake"
-                },
-                {
-                    "id": "NightLight"
+                    "id": "ScreenRecorder"
                 }
             ]
         }
     },
     "dock": {
         "backgroundOpacity": 1,
-        "colorizeIcons": false,
+        "colorizeIcons": true,
         "displayMode": "always_visible",
         "enabled": false,
         "floatingRatio": 1,
@@ -197,6 +175,7 @@
         "onlySameOutput": true,
         "pinnedApps": [
         ],
+        "radiusRatio": 0.1,
         "size": 1
     },
     "general": {
@@ -216,6 +195,7 @@
         "shadowDirection": "center",
         "shadowOffsetX": 0,
         "shadowOffsetY": 0,
+        "showHibernateOnLockScreen": false,
         "showScreenCorners": false
     },
     "hooks": {
@@ -255,10 +235,11 @@
         "location": "top_right",
         "lowUrgencyDuration": 3,
         "monitors": [
+            "HDMI-A-1"
         ],
         "normalUrgencyDuration": 8,
         "overlayLayer": true,
-        "respectExpireTimeout": false
+        "respectExpireTimeout": true
     },
     "osd": {
         "autoHideMs": 2000,
@@ -281,8 +262,8 @@
         "videoSource": "portal"
     },
     "sessionMenu": {
-        "countdownDuration": 10000,
-        "enableCountdown": true,
+        "countdownDuration": 1000,
+        "enableCountdown": false,
         "position": "center",
         "powerOptions": [
             {
@@ -335,6 +316,7 @@
     },
     "templates": {
         "alacritty": true,
+        "cava": false,
         "code": false,
         "discord": false,
         "enableUserTemplates": false,
@@ -347,6 +329,7 @@
         "pywalfox": false,
         "qt": true,
         "spicetify": false,
+        "telegram": false,
         "vicinae": false,
         "walker": false,
         "wezterm": false
